# meteostation-esp32

./: CMakeLists.txt  LICENSE  sdkconfig.defaults
.devcontainer/: devcontainer.json
main/: CMakeLists.txt  config.h  main.cpp
main/domain/: ThermistorModel.h
main/infrastructure/: AdcService.cpp  AdcService.h  NetworkService.cpp  NetworkService.h
